@startuml

title __APP's Class Diagram__\n

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.BuildConfig {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.Game {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.HowToVote {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.MainActivity {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.More {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.RegisterToVote {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.RegistrationInformation {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.Video1 {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.Video2 {
    }
  }
  

  namespace org.nickhinds.know_your_vote {
    class org.nickhinds.know_your_vote.VoterInformation {
    }
  }
  

  org.nickhinds.know_your_vote.Game -up-|> android.support.v4.app.Fragment
  org.nickhinds.know_your_vote.HowToVote .up.|> android.widget.AdapterView.OnItemSelectedListener
  org.nickhinds.know_your_vote.HowToVote -up-|> android.support.v4.app.Fragment
  org.nickhinds.know_your_vote.MainActivity .up.|> android.support.design.widget.NavigationView.OnNavigationItemSelectedListener
  org.nickhinds.know_your_vote.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  org.nickhinds.know_your_vote.More -up-|> android.support.v4.app.Fragment
  org.nickhinds.know_your_vote.RegisterToVote .up.|> android.widget.AdapterView.OnItemSelectedListener
  org.nickhinds.know_your_vote.RegisterToVote -up-|> android.support.v4.app.Fragment
  org.nickhinds.know_your_vote.Video1 -up-|> android.support.v4.app.Fragment
  org.nickhinds.know_your_vote.Video2 -up-|> android.support.v4.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
